--- a/2024_ADS_TopEsp/src/visao/usuario/UsuarioCadastrar.form
+++ b/2024_ADS_TopEsp/src/visao/usuario/UsuarioCadastrar.form
@@ -46,7 +46,7 @@
                           <Component id="jtfEmail" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpfSenha" min="-2" pref="120" max="-2" attributes="0"/>
